# mcpwright

./: .gitignore  LAUNCH_DEV_TO.md  LAUNCH_DISTRIBUTION_PLAN.md  LAUNCH_FINAL.md  LAUNCH_HN.md  LAUNCH_LINKEDIN.md  LAUNCH_REDDIT_PYTHON.md  LAUNCH_RESEARCH_REPORT.md  LAUNCH_X_THREAD.md  LICENSE  LINKEDIN_UPDATE_POST_2026-07-19.md  PYPI_FIX.md  README.md  READY_TO_POST.md  mcpwright.py  pyproject.toml
.github/workflows/: ci.yml
configs/: mcpwright.json.example
core/: __init__.py  resilience.py
docs/: architecture.md  cross-platform.md  mcp-tools.md  pitfalls.md  resilience.md  setup.md  workflows.md
examples/: 01_basic_navigate.py  02_linkedin_message.py  03_naukri_apply.py  04_job_extraction.py  05_form_filler.py
mcpwright/: __init__.py  config.py  session.py
scripts/: smoke_test.py  smoke_test.sh
tests/: test_mcpwright.py
