[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpwright"
version = "0.1.0"
description = "Browser automation that AI agents actually understand. Playwright + MCP for LLM-driven browser control."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Raghav Modi" },
]
keywords = [
    "playwright", "mcp", "model-context-protocol", "browser-automation",
    "ai-agent", "llm", "scraping", "linkedin", "agent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/raghavsaiassistant-wq/mcpwright"
Issues = "https://github.com/raghavsaiassistant-wq/mcpwright/issues"

[tool.setuptools]
packages = ["core"]
